# xiuxian-widget

./: .gitignore  BACKEND_IMPLEMENTATION.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cultivation.rs  db.rs  main.rs
src/components/: DailyStats.tsx  FloatingWindow.tsx  ProgressBar.tsx  RealmBadge.tsx  TechniqueSelector.tsx
src/components/icons/: FunctionIcons.tsx  RealmIcons.tsx  index.ts
src/config/: index.ts
src/styles/: globals.css
src/types/: index.ts
