[package]
name = "xiuxian-widget"
version = "0.1.0"
description = "悬浮修仙 - 桌面挂机游戏"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
dirs = "5.0"
winreg = "0.52"

[features]
custom-protocol = ["tauri/custom-protocol"]
